# gerber-ruster

./: .gitignore  Cargo.toml
src/: lib.rs
src/parser/: commands.rs  mod.rs  reader.rs
src/plotter/: algebraic.rs  arc.rs  circular_direction.rs  intersector.rs  line.rs  mod.rs  path.rs  path_element.rs  plotter.rs  ray.rs  rect_path_helper.rs  stroke_path.rs  stroke_path_element.rs  tree.rs
src/plotter/region/: mod.rs  region_impl.rs  split_regions.rs  stroke_path.rs
src/svg/: bounding_box.rs  mod.rs  serializable.rs  svg_composer.rs  svg_exporter.rs
test-visual/gerber/arc-strokes/: full-circle.gbr  single-quadrant-I-to-II-rect-toole.gbr  zero-length.gbr
test-visual/gerber/regions/: less-shitty-region-with-lines.gbr  region-with-arc-cut-in.gbr  region-with-arcs.gbr  region-with-cut-in-line.gbr  region-with-lines.gbr
test-visual/gerber/smokes/: one-1.gbr  one.gbr  three.gbr  two.gbr
test-visual/gerber/strokes/: rect-tool-with-circle-interpolation.gbr  rect-tool-zero-length.gbr
test_files/: hard_one.gbr  simple.gbr
