[package]
name = "gerber-ruster"
version = "0.1.0"
authors = ["Vasiliy G. Stavenko <stavenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { git= "https://github.com/Geal/nom", branch="master" }

